# AryanAI

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  preprocess_csv.c
benchmark_results/: README.md  generate_medium_linux_time.txt  generate_medium_windows_time.txt  generate_quick_linux_time.txt  generate_quick_windows_time.txt  generate_small_linux_time.txt  generate_small_windows_time.txt  generate_stress_linux_time.txt  train_medium_linux_time.txt  train_medium_windows_time.txt  train_quick_linux_time.txt  train_quick_windows_time.txt  train_small_linux_time.txt  train_small_windows_time.txt  train_stress_linux_time.txt
cmake/: BuildInstructions.txt.in  windows-toolchain.cmake
docs/: BUILD_ORGANIZATION.md  CROSS_PLATFORM_GUIDE.md
include/: interactive_cli.h  matrix.h  optimizer.h  platform.h  tokenizer.h  transformer_config.h  transformer_model.h  utils.h
model/: README.md
model/releases/linux-x64/: QUICK_START.md  README.md  generate.sh  train.sh
model/releases/linux-x64/data/: test_training_data.txt
model/releases/linux-x64/models/: aryan_vocab.vocab
model/releases/windows-x64/: README.md  generate.bat  train.bat
model/releases/windows-x64/data/: test_data.txt
model/releases/windows-x64/models/: aryan_vocab.vocab
scripts/: benchmark_test.sh  build-linux.sh  build-macos.sh  build-windows-cross.sh  build-windows.bat  create-windows-release.sh  test_model.sh
src/: interactive_cli.c  matrix.c  optimizer.c  platform.c  tokenizer.c  transformer_model.c  utils.c
